--- a/index.html
+++ b/index.html
@@ -9,22 +9,31 @@
     <style>
       body {
         font-family: 'Sarabun', sans-serif;
-        background-color: #f1f5f9;
+        background-color: #f8fafc; /* Lighter, cooler gray like Amway bg */
       }
-      /* Custom Scrollbar */
+      /* Custom Scrollbar - Cleaner and thinner */
       ::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
+        width: 6px;
+        height: 6px;
       }
       ::-webkit-scrollbar-track {
-        background: #f1f5f9; 
+        background: transparent; 
       }
       ::-webkit-scrollbar-thumb {
         background: #cbd5e1; 
-        border-radius: 4px;
+        border-radius: 10px;
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #94a3b8; 
+      }
+      
+      .animate-fade-in {
+        animation: fadeIn 0.3s ease-in-out;
+      }
+      
+      @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(10px); }
+        to { opacity: 1; transform: translateY(0); }
       }
     </style>
   <script type="importmap">
