--- a/index.html
+++ b/index.html
@@ -54,6 +54,29 @@
         transform: translateY(-2px);
         box-shadow: 0 12px 30px -10px rgba(0, 0, 0, 0.1);
       }
+
+      /* PRINT STYLES for Thermal Printer (80mm) */
+      @media print {
+        body * {
+          visibility: hidden;
+        }
+        #printable-receipt, #printable-receipt * {
+          visibility: visible;
+        }
+        #printable-receipt {
+          position: fixed;
+          left: 0;
+          top: 0;
+          width: 100%;
+          margin: 0;
+          padding: 0;
+          background: white;
+          color: black;
+        }
+        .no-print {
+          display: none !important;
+        }
+      }
     </style>
   <script type="importmap">
 {
