--- a/index.html
+++ b/index.html
@@ -55,8 +55,17 @@
         box-shadow: 0 12px 30px -10px rgba(0, 0, 0, 0.1);
       }
 
-      /* PRINT STYLES for Thermal Printer (80mm) */
+      /* PRINT STYLES for Thermal Printer (80mm Standard) */
       @media print {
+        @page {
+            margin: 0;
+            size: auto;
+        }
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: white;
+        }
         body * {
           visibility: hidden;
         }
@@ -64,18 +73,28 @@
           visibility: visible;
         }
         #printable-receipt {
-          position: fixed;
+          position: absolute;
           left: 0;
           top: 0;
-          width: 100%;
-          margin: 0;
-          padding: 0;
+          width: 80mm; /* Standard Thermal Paper Width */
+          padding: 5mm;
           background: white;
           color: black;
+          font-family: 'Courier New', Courier, monospace; /* Monospace for alignment */
+          font-size: 12px;
+          line-height: 1.2;
         }
         .no-print {
           display: none !important;
         }
+        
+        /* Receipt Specific Formatting */
+        .receipt-header { text-align: center; margin-bottom: 10px; }
+        .receipt-title { font-size: 16px; font-weight: bold; }
+        .receipt-divider { border-bottom: 1px dashed #000; margin: 5px 0; }
+        .receipt-row { display: flex; justify-content: space-between; }
+        .receipt-total { font-size: 14px; font-weight: bold; margin-top: 5px; }
+        .receipt-footer { text-align: center; margin-top: 15px; font-size: 10px; }
       }
     </style>
   <script type="importmap">
