--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Ncare</title>
+    <title>Ncare ERP</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+39&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Sarabun', sans-serif;
@@ -43,6 +44,11 @@
       .card-hover:hover {
         transform: translateY(-2px);
         box-shadow: 0 12px 30px -10px rgba(0, 0, 0, 0.1);
+      }
+
+      .barcode-font {
+          font-family: 'Libre Barcode 39', cursive;
+          font-size: 32px;
       }
 
       /* PRINT STYLES */
@@ -119,6 +125,10 @@
             padding: 2mm;
             text-align: center;
         }
+        .shelf-tag .price { font-size: 32px; font-weight: bold; }
+        .shelf-tag .name { font-size: 14px; line-height: 1.2; margin: 5px 0; }
+        .shelf-tag .barcode-bars { font-family: 'Libre Barcode 39', cursive; font-size: 40px; line-height: 0.8; }
+        .shelf-tag .code { font-size: 10px; }
 
         /* Full A4 Tax Invoice Printing */
         .print-a4 #printable-a4-invoice, .print-a4 #printable-a4-invoice * { visibility: visible; }
@@ -143,6 +153,8 @@
         .receipt-row { display: flex; justify-content: space-between; }
         .receipt-total { font-size: 14px; font-weight: bold; margin-top: 5px; }
         .receipt-footer { text-align: center; margin-top: 15px; font-size: 10px; }
+        .receipt-barcode { text-align: center; margin-top: 10px; }
+        .receipt-barcode span { font-family: 'Libre Barcode 39', cursive; font-size: 36px; }
       }
     </style>
   <script type="importmap">
